[package]
name = "myprogram-station-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.5"
actix-multipart = "0.6.1"
actix-rt = "2.9.0"
actix-web = { version = "4.5.1", features = ["openssl"] }
chrono = "0.4.35"
elasticsearch = "8.5.0-alpha.1"
futures = "0.3.30"
jsonwebtoken = "9.3.0"
lazy_static = "1.4.0"
lettre = "0.11.6"
lettre_email = "0.9.4"
log = "0.4.21"
log4rs = "1.3.0"
mysql = "25.0.0"
openssl = "0.10.63"
r2d2 = "0.8.10"
r2d2_mysql = "24.0.0"
rand = "0.8.5"
reqwest = "0.11.24"
sanitize-filename = "0.5.0"
serde =  { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = "1.37.0"
toml = "0.8.12"
uuid = { version = "1.8.0", features = ["v4"] }
